[gd_scene load_steps=2 format=2]

[ext_resource path="res://MultiPlayerLobby/MultiPlayerLobby.gd" type="Script" id=1]

[node name="MultiPlayerLobby" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.4
anchor_top = 0.2
anchor_right = 0.6
anchor_bottom = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectTo" type="Label" parent="VBoxContainer"]
margin_right = 204.0
margin_bottom = 14.0
text = "Connect to IP:"

[node name="IP" type="LineEdit" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 204.0
margin_bottom = 42.0
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="Join" type="Button" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 204.0
margin_bottom = 66.0
text = "Join"

[node name="Cancel" type="Button" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 204.0
margin_bottom = 90.0
text = "Cancel"

[node name="Host" type="Button" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 204.0
margin_bottom = 114.0
text = "Host"
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="VBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_Host_pressed"]
